# azure-functions-agents-runtime

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/skills/add-feature/: SKILL.md
.github/skills/update-schema-docs/: SKILL.md
.github/workflows/: release.yml
docs/: AUTO_GENERATION.md  architecture-overview.md  architecture.md  front-matter-reference.md  front-matter-spec.md  observability.md  samples-e2e-pipeline.md  triggers.md  user-identity-propagation.md  workflows.md
docs/frds/: 0001-agents-folder-indexing.md  0002-skill-includes.md  0003-dynamic-workflows.md  0003-runtime-observability.md  0004-dynamic-workflows.md  0004-http-call-system-tool.md  0004-obo-token-header-contract.md  0005-http-call-system-tool.md  0005-web-request-system-tool.md  0006-endpoint-authentication.md  0006-multi-agent-delegation.md  0006-per-agent-dynamic-workflows.md  0007-http-trigger-authentication.md  0007-multi-agent-delegation.md  0008-markdown-triggered-workflows.md  README.md  _template.md
eng/ci/: code-mirror.yml  e2e-tests.yml  library-release.yml  official-build.yml  public-build.yml  samples-e2e.yml
eng/scripts/: README.md  generate_config_reference.py  install-core-tools.yml
eng/templates/: install-core-tools.yml
eng/templates/jobs/: build.yml  ci-tests.yml  sample-e2e.yml
samples/: README.md
samples/basic-chat/: README.md  azure.yaml  test.http
samples/basic-chat/infra/: main.bicep  main.parameters.json
samples/basic-chat/src/: agents.app.yaml  agents.config.yaml  host.json  http_trigger.agent.md  local.settings.json  local.settings.template.json  main.agent.md  requirements.txt
samples/claude-agent/: README.md
samples/claude-agent/src/: CLAUDE.md  agents.config.yaml  summarizer.claude.md
samples/daily-azure-report/: README.md  azure.yaml
samples/daily-azure-report/infra/: main.bicep  main.parameters.json
samples/daily-azure-report/src/: agents.app.yaml  agents.config.yaml  daily_azure_report.agent.md  local.settings.json  local.settings.template.json  main.agent.md  mcp.json  requirements.dev.txt  requirements.txt  resource_summary.agent.md
samples/daily-calendar-email/: README.md  azure.yaml
samples/daily-calendar-email/infra/: main.bicep  main.parameters.json
samples/daily-calendar-email/src/: agents.config.yaml  daily_calendar.agent.md  mcp.json  requirements.txt
samples/daily-tech-news-email/: README.md  azure.yaml
samples/daily-tech-news-email/infra/: main.bicep  main.parameters.json
samples/daily-tech-news-email/src/: agents.app.yaml  agents.config.yaml  daily_tech_news.agent.md  local.settings.json  local.settings.template.json  main.agent.md  mcp.json  requirements.dev.txt  requirements.txt
samples/multi-agent-delegation/: README.md
samples/multi-agent-delegation/src/: agents.config.yaml  (+2 more)
samples/multi-agent-folder/: README.md
samples/obo-e2e/: README.md  agents.config.obo.sample.yaml  decode-jwt-payload.ps1  get-user-token.ps1  mcp.obo.sample.json  test.http
samples/obo-whoami-mcp-server/: Dockerfile  README.md  requirements.txt  server.py
samples/outlook-reply-agent/: README.md  azure.yaml
samples/queue-trigger-agent/: README.md  azure.yaml
samples/secured-endpoints/: README.md  azure.yaml  test.http
samples/skill-includes-demo/: README.md  test.http
samples/workflow-incident-triage/: README.md
samples/workflow-queue-p0-report/: README.md  local-report.ps1
samples/workflow-subagents-preview/: README.md
samples/workflow-timer-trigger/: README.md
scripts/: sync-sample-wheels.ps1  sync_sample_wheels.py
scripts/e2e/: expectations.py  harness.py  redaction.py  run_sample_e2e.py  settings.py
serverless-portal/: .dockerignore  Dockerfile  azure.yaml  deploy.ps1  deploy.sh  package-lock.json  requirements.md
serverless-portal/app/: .env.example  README.md  requirements.txt
serverless-portal/infra/: abbreviations.json  main.bicep  main.parameters.json
serverless-portal/mocks/: README.md  agent-detail.html  agents.html  connectors.html  create-agent.html  create-function-app.html  environments.html  function-apps.html  index.html  monitoring.html  playground.html  providers.html  settings.html  source-control.html  styles.css
serverless-portal/proposals/: mental-models.md
src/azure_functions_agents/: __init__.py  _blob_history.py  _credential.py  _function_tool.py  _logger.py  _obo.py  _observability.py  _session_id.py  _slug.py  _source_marker.py  app.py  app_analyzer.py  client_manager.py  config.py  connector_tool_cache.py  connector_tools.py  copilot_runner.py  handlers.py  mcp.py  runner.py  sandbox.py  skills.py  tools.py  translator.py
tests/: conftest.py  test_app.py  test_app_routes.py  test_blob_history.py  test_client_manager.py  test_config_env.py  test_config_fixtures.py  test_config_loader.py  test_config_merge.py  test_config_paths.py  test_config_schema.py  test_config_validation.py  test_connectors_arm_credential.py  test_discovery_builtin_tools.py  test_discovery_mcp.py  test_discovery_skills.py  test_discovery_tools.py  test_failed_loads_logging.py  test_incident_tools.py  test_maf_warning_suppression.py  test_obo.py  test_observability.py  test_package_imports.py  test_registration_auth.py  test_registration_capabilities.py  test_registration_endpoints.py  test_registration_handlers.py  test_registration_triggers.py  test_runner.py  test_runner_delegation.py  test_runner_harness.py  test_runner_streaming.py  test_sandbox_session_id.py  test_sdk_mode.py  test_source_marker.py  test_system_tools_sandbox.py  test_trigger_serialization.py  test_web_request.py  test_workflow_integration_validation.py  test_workflow_queue_sample.py  (+3 more)
tests/e2e/: test_expectations.py
tests/endtoend/: _agent_probe.py  _func_host.py  _http_probe.py  _mcp_probe.py  _storage_probe.py  test_apps_http.py  test_apps_mcp.py  test_apps_start.py  test_apps_storage.py  test_apps_timer.py  test_samples_agentic.py  test_samples_start.py
(+300 files in other folders)
