[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurefunctions-agents-runtime"
version = "0.0.0dev3"
description = "A markdown-first programming model for building AI agents on Azure Functions, powered by the Microsoft Agent Framework."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0",
    "agent-framework-core>=1.2.2",
    "agent-framework-openai>=1.2.2",
    "agent-framework-foundry>=1.2.2",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
    "azurefunctions-extensions-http-fastapi",
    "aiohttp>=3.9.0",
    "azure-identity>=1.15.0",
    "jsonschema>=4.0",
    "mcp>=1.0.0",
]


[project.optional-dependencies]
connectors = [
    "azure-connectors",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pydantic>=2.0",
    "pytest>=8.0",
    "types-jsonschema",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
azure_functions_agents = ["public/**"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["build", "dist", "samples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "N",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.ruff.lint.isort]
known-first-party = ["azure_functions_agents"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = ["build", "dist", "samples"]

[[tool.mypy.overrides]]
module = "azure_functions_agents.*"
strict = true

[[tool.mypy.overrides]]
module = [
    "agent_framework",
    "agent_framework.*",
    "agent_framework_openai",
    "agent_framework_openai.*",
    "agent_framework_foundry",
    "agent_framework_foundry.*",
    "azurefunctions.*",
    "azure.functions_connectors",
    "azure.functions_connectors.*",
    "frontmatter",
    "aiohttp",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
