[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurefunctions-agents-runtime"
dynamic = ["version"]
description = "A markdown-first programming model for building AI agents on Azure Functions, powered by the Microsoft Agent Framework."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=2.1,<3",
    "azure-functions-durable==1.2.*",
    "agent-framework-core==1.3.*",
    "agent-framework-openai==1.3.*",
    "agent-framework-foundry==1.3.*",
    "pydantic==2.13.*",
    "python-frontmatter==1.1.*",
    "azurefunctions-extensions-http-fastapi==1.0.*",
    "aiohttp>=3.13,<3.15",
    "azure-identity==1.25.*",
    "azure-storage-blob==12.28.*",
    "jsonschema==4.26.*",
    "mcp>=1.27,<1.29",
]

[project.optional-dependencies]
# Azure Monitor exporter — optional. Install `azurefunctions-agents-runtime[monitor]` to export the
# runtime's OpenTelemetry spans/metrics to Application Insights. Without it the runtime emits spans
# only when another OpenTelemetry provider is already active (e.g. the Functions worker) and exports
# nothing on its own. Pinned to 1.8.8 (opentelemetry-sdk 1.40) to avoid the crashing combo in 1.8.9
# (opentelemetry-sdk 1.43 freezes span attributes on end, which the exporter's gen_ai main-agent
# processor mutates in on_end -> TypeError). Fixed upstream in azure-monitor-opentelemetry-exporter
# b55 (Azure/azure-sdk-for-python#47796). TODO: bump to the distro that bundles exporter >=b55.
monitor = [
    "azure-monitor-opentelemetry==1.8.8",
]
dev = [
    "ruff==0.15.*",
    "mypy==2.1.*",
    "pydantic==2.13.*",
    "pytest==9.0.*",
    "types-jsonschema==4.26.*",
    "pytest-cov==7.1.*",
    "pytest-asyncio==1.3.*",
    # Bring the exporter into the dev/test/type-check env so the observability tests (which import
    # azure.monitor.opentelemetry) and mypy on src still resolve it. Keep in sync with the pin in the
    # [monitor] extra above.
    "azure-monitor-opentelemetry==1.8.8",
    # Extra runtime dependencies used by sample apps, needed so the E2E `func start` tests can boot
    # every sample against the editable repo install (no per-sample requirements.txt install).
    # daily-azure-report:
    "jmespath==1.0.*",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "azure_functions_agents.__version__"}

[tool.setuptools.package-data]
azure_functions_agents = ["public/**"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["build", "dist", "samples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "N",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.ruff.lint.isort]
known-first-party = ["azure_functions_agents"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = ["build", "dist", "samples"]

[[tool.mypy.overrides]]
module = "azure_functions_agents.*"
strict = true

[[tool.mypy.overrides]]
module = [
    "agent_framework",
    "agent_framework.*",
    "agent_framework_openai",
    "agent_framework_openai.*",
    "agent_framework_foundry",
    "agent_framework_foundry.*",
    "azurefunctions.*",
    "azure.durable_functions",
    "azure.functions_connectors",
    "azure.functions_connectors.*",
    "frontmatter",
    "aiohttp",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
# E2E tests require Core Tools (func) + Azurite, so they are deselected from the
# default unit-test run. The E2E pipeline opts back in with `-m e2e`.
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests that boot sample apps with `func start` (require func + Azurite).",
]
